feat: 당첨번호를 입력받아 객체 생성하는 기능 구현